exports[`Reducer::Kiosk addError action matches the snapshot 1`] = `
Object {
  "api": Object {
    "hours": "/api/v1/hours",
  },
  "errors": Array [
    Object {
      "code": "500",
      "message": "Error",
    },
  ],
  "slides": Array [],
  "starting_slide_index": 0,
  "type": "touch",
  "url": "kiosk/touch",
}
`;

exports[`Reducer::Kiosk default action matches the snapshot 1`] = `
Object {
  "api": Object {
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "slides": Array [],
  "starting_slide_index": 0,
  "type": "touch",
  "url": "kiosk/touch",
}
`;

exports[`Reducer::Kiosk scrollToSlide action matches the snapshot 1`] = `
Object {
  "api": Object {
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "slides": Array [],
  "starting_slide_index": 1,
  "type": "touch",
  "url": "kiosk/touch",
}
`;

exports[`Reducer::Kiosk setKiosk action matches the snapshot 1`] = `
Object {
  "api": Object {
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "slides": Array [],
  "starting_slide_index": 0,
  "type": Object {
    "type": "touch",
    "url": "/url/to/action",
  },
  "url": undefined,
}
`;

exports[`Reducer::Kiosk setSlides action matches the snapshot 1`] = `
Object {
  "api": Object {
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "slides": Array [
    Object {
      "caption": "Slide.caption",
      "created_at": "2000-12-31T11:59:59Z",
      "expires_at": "2020-12-31T23:59:59Z",
      "id": 1,
      "image_url": "/uploads/default_slide_1.png",
      "kiosk": "Kiosk.name",
      "slide_type": "SlideType.name",
      "title": "Slide.title",
      "updated_at": "2000-12-31T23:59:59Z",
    },
    Object {
      "caption": "Slide.caption:2",
      "created_at": "2000-11-11T11:00:00Z",
      "expires_at": "2010-11-11T13:00:00Z",
      "id": 2,
      "image_url": "/uploads/default_slide_2.png",
      "kiosk": "Kiosk.name:2",
      "slide_type": "SlideType.name:2",
      "title": "Slide.title:2",
      "updated_at": "2000-11-11T13:00:00Z",
    },
  ],
  "starting_slide_index": 0,
  "type": "touch",
  "url": "kiosk/touch",
}
`;
